--- a/templates/includes/footer/public.html
+++ b/templates/includes/footer/public.html
@@ -68,8 +68,8 @@
             <div class="col-lg-2 col-md-6 mb-4">
                 <h6 class="footer-title">Legal</h6>
                 <ul class="footer-links">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="{% url 'serve_legal_document' 'privacy-policy' %}" target="_blank">Privacy Policy</a></li>
+                    <li><a href="{% url 'serve_legal_document' 'terms-of-service' %}" target="_blank">Terms of Service</a></li>
                     <li><a href="#">License</a></li>
                     <li><a href="#">Cookie Policy</a></li>
                     <li><a href="#">GDPR</a></li>
