--- a/templates/subscriptions/selection_new.html
+++ b/templates/subscriptions/selection_new.html
@@ -202,8 +202,8 @@
             </div>
             <div class="terms-links">
                 By continuing, you agree to our 
-                <a href="#" target="_blank">Terms of Service</a> and 
-                <a href="#" target="_blank">Privacy Policy</a>
+                <a href="{% url 'serve_legal_document' 'terms-of-service' %}" target="_blank">Terms of Service</a> and 
+                <a href="{% url 'serve_legal_document' 'privacy-policy' %}" target="_blank">Privacy Policy</a>
             </div>
         </div>
     </div>
